--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,11 +1,11 @@
 html{
-    background-color: white;
+    background-color: rgb(52, 50, 48);
 }
 .header{
     top: -40px;
     position: relative;
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 20px;
 }
 .header:hover{
@@ -32,37 +32,12 @@ html{
     position: relative;
     left: 200px;
 }
-.photo{
-    display: flex;
-    align-items: center;
-    height: 200px;
-}
-.img{
-  width: 200px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.description{
-    color: black;
-    display: flex;
-    align-items: center;
-    height: 150px;
-}
-p{
-    width: 180px;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 .footer{
     position: relative;
-    top: 553px;
+    top: 485px;
 }
 svg path{
-    fill: black;
+    fill: white;
 }
 svg path:hover{
     fill: #228BE6;
@@ -77,7 +52,7 @@ svg path:hover{
     z-index: 1;
     top: 0;
     left: -250px;
-    background-color: white;
+    background-color: rgb(52, 50, 48);
     padding-top: 60px;
     transition: left 0.5s ease;
   }
@@ -87,7 +62,7 @@ svg path:hover{
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: black;
+    color: white;
     display: block;
     transition: 0.3s;
   }
@@ -177,19 +152,7 @@ svg path:hover{
         position: relative;
         left: 175px;
     }
-    .img{
-        height: 140px;
-        position: relative;
-        top: 130px;
-        left: 70px;
-        width: 140px;
-    }
-    .description{
-        position: relative;
-        top: 90px;
-        left: 85px;
-    }
     .footer{
-        top: 65px;
+        top: 319px;
     }
 }
