--- a/article/css.css
+++ b/article/css.css
@@ -1,11 +1,11 @@
 html{
-    background-color: white;
+    background-color: rgb(52, 50, 48);
 }
 .header{
     top: -40px;
     position: relative;
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 20px;
 }
 .header:hover{
@@ -32,12 +32,25 @@ html{
     position: relative;
     left: 200px;
 }
+.laptop{
+    height: 500px;
+}
+.blog1{
+    color: white;
+}
+p{
+    width: 180px;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .footer{
     position: relative;
-    top: 347px;
+    top: 100px;
 }
 svg path{
-    fill: black;
+    fill: white;
 }
 svg path:hover{
     fill: #228BE6;
@@ -52,7 +65,7 @@ svg path:hover{
     z-index: 1;
     top: 0;
     left: -250px;
-    background-color: white;
+    background-color: rgb(52, 50, 48);
     padding-top: 60px;
     transition: left 0.5s ease;
   }
@@ -62,7 +75,7 @@ svg path:hover{
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: black;
+    color: white;
     display: block;
     transition: 0.3s;
   }
@@ -98,27 +111,6 @@ svg path:hover{
     background-color: black;
     margin: 6px 0;
   }
-  .laptop{
-    height: 120px;
-    position: relative;
-    top: 10px;
-    left: 35px;
-  }
-  .blog1{
-    height: 190px;
-    color: black;
-    text-align: center;
-    width: 300px;
-    box-sizing: 5px 5px 5px;
-    border: 0.5em solid black;
-  }
-  .blog-consult1{
-    text-decoration: none;
-    color: black;
-    position: relative;
-    left: -95px;
-    top: 35px;
-  }
 @media all and (max-width: 480px)  {
     .header{
         visibility: hidden;
@@ -138,12 +130,8 @@ svg path:hover{
     .hamburger{
         visibility: visible;
     }
-    .img{
-        height: 100px;
-        width: 100px;
-    }
-    .description{
-        top: 350px;
+    .laptop{
+        height: 170px;
     }
     .footer{
         visibility: hidden;
@@ -174,6 +162,6 @@ svg path:hover{
         left: 175px;
     }
     .footer{
-        top: 319px;
+        top: 65px;
     }
 }
