--- a/light/style.css
+++ b/light/style.css
@@ -61,6 +61,13 @@ p{
     position: relative;
     top: 553px;
 }
+.credits{
+    text-decoration: none;
+    color: black;
+    position: relative;
+    top: -15px;
+    left: 10px;
+}
 svg path{
     fill: black;
 }
