--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -41,6 +41,13 @@ html{
     position: relative;
     top: 99px;
 }
+.credits{
+    text-decoration: none;
+    color: white;
+    position: relative;
+    top: -15px;
+    left: 10px;
+}
 svg path{
     fill: white;
 }
