--- a/light/assets/css/contact.css
+++ b/light/assets/css/contact.css
@@ -57,6 +57,13 @@ html{
     position: relative;
     top: 368px;
 }
+.credits{
+    text-decoration: none;
+    color: black;
+    position: relative;
+    top: -15px;
+    left: 10px;
+}
 svg path{
     fill: black;
 }
