--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,6 @@
 html{
     background-color: rgb(52, 50, 48);
+    cursor: url('../img/curseur-dark.cur'), pointer;
 }
 .header{
     top: -40px;
@@ -11,6 +12,7 @@ html{
 .header:hover{
     cursor: pointer;
     color: #228BE6;
+    cursor: url('../img/curseur-blue.cur'), pointer;
 }
 .h2{
     left: 50px;
@@ -51,7 +53,7 @@ html{
     color: white;
 }
 .envoyer:hover{
-    cursor: pointer;
+    cursor: url('../img/curseur-blue.cur'), pointer;
 }
 .footer{
     position: relative;
@@ -64,11 +66,15 @@ html{
     top: -15px;
     left: 10px;
 }
+.credits:hover{
+    cursor: url('../img/curseur-blue.cur'), pointer;
+}
 svg path{
     fill: white;
 }
 svg path:hover{
     fill: #228BE6;
+    cursor: url('../img/curseur-blue.cur'), pointer;
 }
 .hamburger{
     visibility: hidden;
