--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
     background-color: rgb(52, 50, 48);
+    cursor: url('./assets/img/curseur-dark.cur'), pointer; 
 }
 .header{
     top: -40px;
@@ -9,7 +10,7 @@ html{
     font-size: 20px;
 }
 .header:hover{
-    cursor: pointer;
+    cursor: url('./assets/img/curseur-blue.cur'), pointer;
     color: #228BE6;
 }
 .h2{
@@ -49,6 +50,7 @@ html{
     display: flex;
     align-items: center;
     height: 150px;
+    left: 650px;
 }
 p{
     width: 180px;
@@ -68,11 +70,15 @@ p{
     top: -15px;
     left: 10px;
 }
+.credits:hover{
+    cursor: url('./assets/img/curseur-blue.cur'), pointer;
+}
 svg path{
     fill: white;
 }
 svg path:hover{
     fill: #228BE6;
+    cursor: url('./assets/img/curseur-blue.cur'), pointer;
 }
 .hamburger{
     visibility: hidden;
