--- a/assets/css/projets.css
+++ b/assets/css/projets.css
@@ -115,7 +115,7 @@ svg path:hover{
     z-index: 1;
     top: 0;
     left: -250px;
-    background-color: rgb(52, 50, 48);
+    background-color: transparent;
     padding-top: 60px;
     transition: left 0.5s ease;
   }
