--- a/light/assets/css/contact.css
+++ b/light/assets/css/contact.css
@@ -85,7 +85,7 @@ svg path:hover{
     z-index: 1;
     top: 0;
     left: -250px;
-    background-color: white;
+    background-color: transparent;
     padding-top: 60px;
     transition: left 0.5s ease;
   }
